welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: Boolean(true) does not take parameters
  if (estFaceMur)()==true{
                         ^SnakeBuggle:52: error: Boolean does not take parameters
      }else(getDirection()==Direction.OUEST){
                                            ^